--- a/Assignment1/practical2.htm
+++ b/Assignment1/practical2.htm
@@ -23,7 +23,7 @@
     <span style="color: rgb(97, 170, 97);">&lt!-- this is html comment --&gt</span>
     Write your content here...... 
     &lt/body&gt
-    &lthtml&gt
+    &lt/html&gt
     </pre>
 
 </body>
