--- a/Practical3/index.htm
+++ b/Practical3/index.htm
@@ -14,6 +14,9 @@
     <h2>About course</h2>
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed
         to the database or server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
+
+    <h2>Output</h2>
+    <h2 style="text-align: center;">Live Page on Github</h2>
 </body>
 
 </html>
