--- a/Practical3/index.htm
+++ b/Practical3/index.htm
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-3</title>
+    <style>
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,6 +25,9 @@
 
     <h2>Output</h2>
     <h2 style="text-align: center;">Live Page on Github</h2>
+    <div>
+        <img src="./Image1.png" class="center">
+    </div>
 </body>
 
 </html>
