first practical update

--- a/Practical4/index.htm
+++ b/Practical4/index.htm
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <h1 style="text-transform: capitalize;text-align: center;color: blue;">Link of Praticals 1 to 4</h1>
+    <h1 style="text-transform: capitalize;text-align: center;color: blue;"></h1>
     <div>
         <p>Create Your First Web page using:<br> 1. HTML Editor <br> 2. Online Sandbox Environment<br> Note: In the content part of the Page write "About Fullstack Web Development".</p>
         <a href="https://bharatarora12345.github.io/FullStackPracticals/Practical1/"><button>Practical-1</button></a>
