--- a/Practical1/index.htm
+++ b/Practical1/index.htm
@@ -6,13 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-1</title>
+    <style>
+        img {
+            width: 80%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 
 <body>
+    <h3 style="color: red;">Practical-1: Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment</h3>
     <h1>Welcome to Fullstack Course</h1>
     <h2>About course</h2>
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language (HTML), Cascading Style Sheets (CSS) and JavaScript portion of web site production as opposed
         to the database or server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devices and screen sizes</p>
+    <h1>Output</h1>
+    <div style="text-align: center;">
+        <h3>Offline HTML Editor</h3>
+        <img src="./offilineEditor.png">
+        <h3>Online Sandbox Environment</h3>
+        <img src="./onlineEditor.png">
+    </div>
 </body>
 
 </html>
