update image size on Practical3

--- a/Practical3/index.htm
+++ b/Practical3/index.htm
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-3</title>
     <style>
-        .center {
+        img {
+            width: 80%;
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 50%;
         }
     </style>
 </head>
@@ -26,7 +26,7 @@
     <h2>Output</h2>
     <h2 style="text-align: center;">Live Page on Github</h2>
     <div>
-        <img src="./Image1.png" class="center">
+        <img src="./Image1.png">
     </div>
 </body>
 
