create particular folder for images

--- a/Practical1/index.htm
+++ b/Practical1/index.htm
@@ -25,9 +25,9 @@
     <h1>Output</h1>
     <div style="text-align: center;">
         <h3>Offline HTML Editor</h3>
-        <img src="./offilineEditor.png">
+        <img src="./images/offilineEditor.png">
         <h3>Online Sandbox Environment</h3>
-        <img src="./onlineEditor.png">
+        <img src="./images/onlineEditor.png">
     </div>
 </body>
 
