--- a/Practical3/index.htm
+++ b/Practical3/index.htm
@@ -26,7 +26,7 @@
     <h2>Output</h2>
     <h2 style="text-align: center;">Live Page on Github</h2>
     <div>
-        <img src="./Image1.png">
+        <img src="./Images/Image1.png">
     </div>
 </body>
 
