Link image1.jpg to its practicals nnumbers

--- a/Practical5/index.htm
+++ b/Practical5/index.htm
@@ -27,7 +27,15 @@
 </head>
 
 <body>
-    <img src="./Images/menu.jpg">
+    <img src="./Images/menu.jpg" usemap="#mymap">
+    <map name="mymap">
+        <area shape="rect" coords="35,33,88,46" alt="home" target="home"href="https://bharatarora12345.github.io/FullStackPracticals/Practical4/">
+        <area shape="rect" coords="156,32,297,45" alt="practical-1" target="practical-1" href="https://bharatarora12345.github.io/FullStackPracticals/Practical1/">
+        <area shape="rect" coords="360,33,503,49" alt="practical-2" target="practical-2"href="https://bharatarora12345.github.io/FullStackPracticals/Practical2/">
+        <area shape="rect" coords="573,33,717,49" alt="practical-3" target="practical-3" href="https://bharatarora12345.github.io/FullStackPracticals/Practical3/">
+        <area shape="rect" coords="789,33,937,49" alt="practical-4" target="practical-4" href="https://bharatarora12345.github.io/FullStackPracticals/Practical4/">
+        <area shape="rect" coords="991,33,1140,50" alt="practical-5" target="practical-5" href="https://bharatarora12345.github.io/FullStackPracticals/Practical5/">
+    </map>
     <div>
         <h1>Introduction to Front-End Technologies</h1>
         <img src="./Images/Practical-5.jpg" usemap="#usemap">
