--- a/Practical4/index.htm
+++ b/Practical4/index.htm
@@ -8,7 +8,7 @@
     <title>Practical-4</title>
     <style>
         body {
-            background-color: powderblue;
+            background-color: rgb(211, 214, 181);
         }
     </style>
 </head>
@@ -19,7 +19,7 @@
     <h2 style="color: cadetblue;">Welcome to Live Practical Book</h2>
     <p>This is Live Practical Book for the Subject Fullstack Web Development-1. In this book we are performing all the practicals related to Front-end web development including topics from HTML, CSS, JS and Bootstrap. This book is hosted on Github cloud
         platform. You can view all the practicals from this Book.</p>
-    <h1 style="color: cadetblue;">List Of Practicals</h1>
+    <h1 style="color: rgb(59, 145, 59);">List Of Practicals</h1>
     <ol>
         <div>
             <li>
