--- a/Practical5/index.htm
+++ b/Practical5/index.htm
@@ -34,16 +34,16 @@
         <area shape="rect" coords="360,33,503,49" alt="practical-2" target="practical-2"href="https://bharatarora12345.github.io/FullStackPracticals/Practical2/">
         <area shape="rect" coords="573,33,717,49" alt="practical-3" target="practical-3" href="https://bharatarora12345.github.io/FullStackPracticals/Practical3/">
         <area shape="rect" coords="789,33,937,49" alt="practical-4" target="practical-4" href="https://bharatarora12345.github.io/FullStackPracticals/Practical4/">
-        <area shape="rect" coords="991,33,1140,50" alt="practical-5" target="practical-5" href="https://bharatarora12345.github.io/FullStackPracticals/Practical5/">
+        <area shape="rect" coords="991,33,1140,50" target="practical-5" href="https://bharatarora12345.github.io/FullStackPracticals/Practical5/">
     </map>
     <div>
         <h1>Introduction to Front-End Technologies</h1>
         <img src="./Images/Practical-5.jpg" usemap="#usemap">
         <map name="usemap">
             <area shape="rect" coords="20,8,170,165" alt="html" href="./htmlinfo.htm">
-            <area shape="circle" coords="285,92,95" alt="css" href="www.flipkart.com">
-            <area shape="rect" coords="24,197,170,339" alt="javaScript" href="www.google.com">
-            <area shape="poly" coords="230,224,286,200,346,225,337,296,289,329,238,300" alt="bootstrap" href="www.amazon.in">
+            <area shape="circle" coords="285,92,95" alt="css" href="./cssinfo.htm">
+            <area shape="rect" coords="24,197,170,339" alt="javaScript" href="./jsinfo.htm">
+            <area shape="poly" coords="230,224,286,200,346,225,337,296,289,329,238,300" alt="bootstrap" href="./bootstrapinfo.htm">
         </map>
         <h2 style="color: red;">Click on any part of logo to know about these technologies.</h2>
     </div>
