--- a/Practical5/htmlinfo.htm
+++ b/Practical5/htmlinfo.htm
@@ -5,11 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>htmlinfo Page</title>
+    <title>HTML </title>
+    <style>
+        body {
+            background-color: rgb(214, 214, 214);
+        }
+        
+        img {
+            text-align: center;
+        }
+        
+        p {
+            padding: 5px 5px 5px 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>This is about html</h1>
+    <img src="./Images/html.jpg">
+
+    <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages. Hypertext refers to the way in which Web pages (HTML documents) are linked together. Thus, the link available on a webpage is called Hypertext.
+        As its name suggests, HTML is a Markup Language which means you use HTML to simply "mark-up" a text document with tags that tell a Web browser how to structure it to display. Originally, HTML was developed with the intent of defining the structure
+        of documents like headings, paragraphs, lists, and so forth to facilitate the sharing of scientific information between researchers.</p>
 </body>
 
 </html>
