html page done with connection

--- a/Practical5/htmlinfo.htm
+++ b/Practical5/htmlinfo.htm
@@ -9,14 +9,14 @@
     <style>
         body {
             background-color: rgb(214, 214, 214);
-        }
-        
-        img {
             text-align: center;
         }
         
         p {
-            padding: 5px 5px 5px 5px;
+            padding: 20px 20px 20px 20px;
+            text-align: left;
+            background-color: rgb(129, 129, 129);
+            color: white;
         }
     </style>
 </head>
