--- a/Practical5/bootstrap.htm
+++ b/Practical5/bootstrap.htm
@@ -5,11 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap Information</title>
+    <style>
+        body {
+            background-color: rgb(214, 214, 214);
+            text-align: center;
+        }
+        
+        p {
+            padding: 20px 20px 20px 20px;
+            text-align: left;
+            background-color: rgb(129, 129, 129);
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>This is for bootstrap </h1>
+    <img src="./Images/bootstrap.jpg">
+    <pBootstrap is a free and open-source tool collection for creating responsive websites and web applications. It is the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile-first web sites. It solves many problems which we
+        had once, one of which is the cross-browser compatibility issue. Nowadays, the websites are perfect for all the browsers (IE, Firefox and Chrome) and for all sizes of screens (Desktop, Tablets, Phablets, and Phones). All thanks to Bootstrap developers
+        -Mark Otto and Jacob Thornton of Twitter, though it was later declared to be an open-source project.>
+        </p>
 </body>
 
 </html>
