--- a/Practical5/htmlinfo.htm
+++ b/Practical5/htmlinfo.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML </title>
+    <title>HTML Information</title>
     <style>
         body {
             background-color: rgb(214, 214, 214);
