--- a/Practical5/jsinfo.htm
+++ b/Practical5/jsinfo.htm
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Information</title>
+    <style>
+        body {
+            background-color: rgb(214, 214, 214);
+            text-align: center;
+        }
+        
+        p {
+            padding: 20px 20px 20px 20px;
+            text-align: left;
+            background-color: rgb(129, 129, 129);
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>This is for js info</h1>
+    <img src="./Images/javascript.png">
+    <p>JavaScript is a dynamic programming language that's used for web development, in web applications, for game development, and lots more. It allows you to implement dynamic features on web pages that cannot be done with only HTML and CSS</p>
 </body>
 
 </html>
