--- a/Practical5/htmlinfo.htm
+++ b/Practical5/htmlinfo.htm
@@ -18,6 +18,11 @@
             background-color: rgb(129, 129, 129);
             color: white;
         }
+        
+        img {
+            width: 550px;
+            height: 400px;
+        }
     </style>
 </head>
 
