--- a/Practical5/index.htm
+++ b/Practical5/index.htm
@@ -40,10 +40,10 @@
         <h1>Introduction to Front-End Technologies</h1>
         <img src="./Images/Practical-5.jpg" usemap="#usemap">
         <map name="usemap">
-            <area shape="rect" coords="20,8,170,165" alt="html" href="./htmlinfo.htm">
-            <area shape="circle" coords="285,92,95" alt="css" href="./cssinfo.htm">
-            <area shape="rect" coords="24,197,170,339" alt="javaScript" href="./jsinfo.htm">
-            <area shape="poly" coords="230,224,286,200,346,225,337,296,289,329,238,300" alt="bootstrap" href="./bootstrapinfo.htm">
+            <area shape="rect" coords="20,8,170,165" alt="html" target="htmlinfo.htm" href="./htmlinfo.htm">
+            <area shape="circle" coords="285,92,95" alt="css" target="cssinfo.htm" href="./cssinfo.htm">
+            <area shape="rect" coords="24,197,170,339" alt="javaScript" target="jsinfo.htm"  href="./jsinfo.htm">
+            <area shape="poly" coords="230,224,286,200,346,225,337,296,289,329,238,300" alt="bootstrap" target="bootstrapinfo.htm" href="./bootstrapinfo.htm">
         </map>
         <h2 style="color: red;">Click on any part of logo to know about these technologies.</h2>
     </div>
