--- a/Practical6/index.htm
+++ b/Practical6/index.htm
@@ -6,10 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-6</title>
+    <style>
+        body {
+            background-color: rgb(207, 207, 207);
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        h1 {
+            color: white;
+        }
+        
+        .card {
+            width: 20%;
+            margin: 20px 20px;
+            /* background-color: white; */
+            border-radius: 10px;
+            box-shadow: 0 5px 5px rgb(0, 0, 0 / 15%);
+        }
+        /* .card p {
+            margin: 10px;
+            text-align: justify;
+        } */
+    </style>
 </head>
 
 <body>
-
+    <h1>PRACTICAL-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.</h1>
+    <div>
+        <div class="card">
+            <img src="./Images/html.jpg">
+            <h4>Introduction to HTML</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate debitis aliquam fugit autem commodi quibusdam quia est omnis. Id rem voluptates ipsam! Omnis distinctio modi nam architecto aliquam blanditiis?</p>
+            <a href="./htmlinfo.htm"></a>
+        </div>
+    </div>
 
 </body>
 
