--- a/Practical7/index.htm
+++ b/Practical7/index.htm
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>This is Practical7
-    </h1>
+    <h1>This is Practical7</h1>
+    <h1>This is checking 2</h1>
 </body>
 
 </html>
