--- a/Practical7/index.htm
+++ b/Practical7/index.htm
@@ -25,7 +25,7 @@
         #container {
             width: 100%;
             height: 100%;
-            margin: 0px auto;
+            margin: 0 auto;
             color: white;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 40px;
@@ -77,6 +77,7 @@
             float: left;
             margin-right: 5px;
             margin-left: 50px;
+            display: flex;
         }
         
         #maincontent {
