--- a/Practical4/index.htm
+++ b/Practical4/index.htm
@@ -37,7 +37,15 @@
             <li>
                 <p>Create a website having list of all practical and their individual practical Page links. <a href="https://bharatarora12345.github.io/FullStackPracticals/Practical4/">Practical-4</a></p>
             </li>
-
+            <li>
+                <p>Create a Web-Page showing the use of Image-Map in the Web Application.<a href="https://bharatarora12345.github.io/FullStackPracticals/Practical5/">Practical-5</a></p>
+            </li>
+            <li>
+                <p>Create a Card Layout using CSS layout properties. <a href="https://bharatarora12345.github.io/FullStackPracticals/Practical6/">Practical-6</a></p>
+            </li>
+            <li>
+                <p>Create a Web Page Layout using div tags. <a href="https://bharatarora12345.github.io/FullStackPracticals/Practical7/">Practical-7</a></p>
+            </li>
         </div>
     </ol>
 </body>
