--- a/Practical8/index.htm
+++ b/Practical8/index.htm
@@ -140,6 +140,7 @@
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            position: fixed;
         }
         
         .navBar ul {
