fixed navbar with proper look and correct scrollng

--- a/Practical8/index.htm
+++ b/Practical8/index.htm
@@ -137,10 +137,16 @@
         /* // navigation bar */
         
         .navBar {
+            height: 68px;
             display: flex;
             justify-content: space-evenly;
             align-items: center;
             position: fixed;
+            background-color: grey;
+            width: 100%;
+            top: 0;
+            overflow: hidden;
+            margin-bottom: 15px;
         }
         
         .navBar ul {
@@ -301,10 +307,10 @@
         <div id="header">
             <div class="navBar">
                 <ul>
-                    <li><a href="#container">Home</a></li>
+                    <li><a href="#header">Home</a></li>
                     <li><a href="#banner">About</a></li>
-                    <li><a href="#section-2">Team</a></li>
-                    <li><a href="#section-3">Technologies</a></li>
+                    <li><a href="#section-1">Team</a></li>
+                    <li><a href="#grid-container">Technologies</a></li>
                     <li><a href="#footer">Contact</a></li>
                 </ul>
             </div>
@@ -391,15 +397,7 @@
                 <a href="bootstrapinfo.htm">Read More</a>
             </div>
         </div>
-        <!-- <div id="section-3">
-            <h1>Technologies Used</h1>
-            <div id="squares">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
-        </div> -->
+
     </div>
     <div id="footer">
         <p>Website Template to Practical-8
