content section is done and perfect image is add up

--- a/Practical10/index.htm
+++ b/Practical10/index.htm
@@ -14,7 +14,25 @@
         <img src="./fullStackicononly.png">
         <h1>FULLSTACK</h1>
     </div>
-
+    <div class="content">
+        <img src="./Image3.jpg">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quidem in aut quis quod deleniti! Nulla perspiciatis animi praesentium dicta vel, numquam iste esse similique libero molestiae officiis ullam culpa! Eligendi placeat, tempora est
+            id quidem expedita nisi iure ratione voluptate iste quod maxime sint laboriosam accusamus molestias delectus voluptatem harum illum? Veritatis culpa, ipsa voluptate magnam minima nulla alias impedit ullam doloribus, mollitia eos repellat officia
+            nihil expedita minus excepturi voluptas reiciendis aperiam voluptatibus repudiandae quidem ad? Dolorem a quos hic? Saepe similique exercitationem voluptates nulla dignissimos, ipsa, molestiae obcaecati reprehenderit aliquid consectetur neque
+            libero necessitatibus aut animi ut ullam, tempora minus. Accusamus, inventore excepturi explicabo voluptate non quasi sunt reiciendis! Beatae totam facere debitis magnam, quis officia consectetur explicabo id voluptatum expedita. Eligendi
+            non praesentium quia cum in odit alias! Quod libero soluta obcaecati odit, quos molestias necessitatibus odio quas autem aspernatur vel recusandae quaerat voluptatibus iusto nostrum quasi fuga. Reiciendis id, itaque, expedita dolores exercitationem
+            quaerat ut ipsa harum perspiciatis voluptatibus temporibus laboriosam veniam molestias, atque voluptas vero necessitatibus rerum aliquid quis assumenda consequuntur voluptate cupiditate earum et. Deleniti assumenda ex aliquid animi commodi
+            nulla possimus, laborum cumque hic enim mollitia, excepturi ducimus consequatur cum repellat fugit quos, ipsam doloribus sint ut odit non! Id facilis minima rem pariatur ab repellat! Ratione pariatur ducimus tenetur hic quasi aspernatur, architecto
+            aliquid? Neque reprehenderit, commodi rerum quidem beatae magnam voluptates dolores exercitationem quas fugiat natus nobis ipsam et, nemo minima, eaque autem velit quasi. Expedita labore delectus quisquam ad officia deserunt rerum nesciunt
+            dolorum ut rem ratione enim similique adipisci architecto in magnam omnis, aut, error quidem ipsa, ullam autem. Corporis ducimus perferendis incidunt culpa tenetur debitis quam eligendi illo quaerat eaque iste commodi, in non voluptatibus.
+            Officiis consequuntur exercitationem dignissimos facilis corporis sunt assumenda, praesentium dolorem minima eum sit doloremque at iure, illo earum veniam porro in, consectetur adipisci. Atque voluptate quas minima architecto, mollitia laborum
+            nisi modi consectetur quos laboriosam error reprehenderit, incidunt at optio earum, impedit nam sequi sit cumque rem! Sapiente recusandae eligendi autem quam minima saepe quibusdam molestias sequi dolorem, dolore accusantium, animi perferendis
+            veritatis dignissimos! Hic a eveniet deserunt, consequatur ab magnam nostrum consectetur at nihil officiis doloribus illo fugit aliquam maiores neque similique aperiam accusantium facere. Aliquid, ullam velit, harum dolorum error recusandae
+            tempore, est laboriosam consequatur voluptatem id corporis quibusdam deserunt a repellat aut dolore. Fuga iusto incidunt ducimus expedita molestiae obcaecati quod, ut laborum totam quas magnam, itaque quos fugit quaerat quo doloremque inventore
+            odio, quia sed voluptas. Minus impedit asperiores quo dolor numquam maxime libero vero laboriosam aperiam ratione, suscipit nobis architecto veniam commodi recusandae, quaerat error? Laborum voluptatum deserunt aspernatur fugit, molestias
+            odio incidunt numquam consequuntur nemo provident maxime, corporis iure veniam possimus dolore excepturi. Tempore totam hic explicabo. Quae, quibusdam possimus repudiandae aut ducimus eum eveniet facere nostrum quisquam ipsam. Assumenda fuga
+            nulla ipsum necessitatibus, voluptatum dolorem amet veniam sequi nobis, fugit perspiciatis magnam sit reprehenderit earum alias esse deserunt laudantium doloremque natus delectus. Laboriosam, vero itaque.</p>
+    </div>
 </body>
 
 </html>
