sidebar section is done

--- a/Practical10/index.htm
+++ b/Practical10/index.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-10</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -32,6 +33,16 @@
             odio, quia sed voluptas. Minus impedit asperiores quo dolor numquam maxime libero vero laboriosam aperiam ratione, suscipit nobis architecto veniam commodi recusandae, quaerat error? Laborum voluptatum deserunt aspernatur fugit, molestias
             odio incidunt numquam consequuntur nemo provident maxime, corporis iure veniam possimus dolore excepturi. Tempore totam hic explicabo. Quae, quibusdam possimus repudiandae aut ducimus eum eveniet facere nostrum quisquam ipsam. Assumenda fuga
             nulla ipsum necessitatibus, voluptatum dolorem amet veniam sequi nobis, fugit perspiciatis magnam sit reprehenderit earum alias esse deserunt laudantium doloremque natus delectus. Laboriosam, vero itaque.</p>
+    </div>
+
+    <div class="sidebar">
+        <ul>
+            <li><a href="#"><i class="fa fa-home"></i><span>Home</span></a></li>
+            <li><a href="#"><i class="fa fa-user"></i><span>About</span></a></li>
+            <li><a href="#"><i class="fa fa-tasks"></i><span>Services</span></a></li>
+            <li><a href="#"><i class="fa fa-rss"></i><span>Blog</span></a></li>
+            <li><a href="#"><i class="fa fa-id-card"></i><span>Contact</span></a></li>
+        </ul>
     </div>
 </body>
 
