--- a/Practical10/index.htm
+++ b/Practical10/index.htm
@@ -43,6 +43,11 @@
             <li><a href="#"><i class="fa fa-rss"></i><span>Blog</span></a></li>
             <li><a href="#"><i class="fa fa-id-card"></i><span>Contact</span></a></li>
         </ul>
+        <div class="social">
+            <a href="#"><i class="fa fa-facebook-square"></i></a>
+            <a href="#"><i class="fa fa-youtube-square"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
     </div>
 </body>
 
