responsive part of practical 10 is done

--- a/Practical10/index.htm
+++ b/Practical10/index.htm
@@ -15,6 +15,14 @@
         <img src="./fullStackicononly.png">
         <h1>FULLSTACK</h1>
     </div>
+    <input type="checkbox" name="" id="chk">
+    <label for="chk" class="show-btn">
+        <i class="fa fa-bars"></i>
+    </label>
+    <label for="chk" class="hide-btn">
+        <i class="fa fa-times"></i>
+    </label>
+
     <div class="content">
         <img src="./Image3.jpg">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quidem in aut quis quod deleniti! Nulla perspiciatis animi praesentium dicta vel, numquam iste esse similique libero molestiae officiis ullam culpa! Eligendi placeat, tempora est
